...
          child: SingleChildScrollView(
            child: Column(
              mainAxisAlignment: MainAxisAlignment.center,
              children: [
                const SizedBox(height: 20),
                FormBuilderTextField(
                  key: const Key('first_name_field'),
                  name: 'first_name',
                  keyboardType: TextInputType.name,
                  controller: firstNameController,
                  decoration: InputDecoration(
                    border: const OutlineInputBorder(
                      borderRadius: BorderRadius.all(Radius.circular(12)),
...
                    }
                    FocusScope.of(context).requestFocus(lastNameFocusNode);
                  },
                ),
                const SizedBox(height: 20),
                FormBuilderTextField(
                  key: const Key('last_name_field'),
                  name: 'last_name',
                  keyboardType: TextInputType.name,
                  controller: lastNameController,
                  decoration: InputDecoration(
                    border: const OutlineInputBorder(
                      borderRadius: BorderRadius.all(Radius.circular(12)),
...
                    }
                    FocusScope.of(context).requestFocus(emailFocusNode);
                  },
                ),
                const SizedBox(height: 20),
                RegisterEmailTextField(
                  key: const Key('email_field'),
                  controller: emailController,
                  focusNode: emailFocusNode,
                  onFieldSubmitted: (final value) {
                    if (emailFocusNode.hasFocus) {
                      emailFocusNode.unfocus();
                    }
                    FocusScope.of(context).requestFocus(passwordFocusNode);
                  },
                ),
                const SizedBox(height: 20),
                AuthTextField(
                  key: const Key('password_field'),
                  name: 'password',
                  keyboardType: TextInputType.visiblePassword,
                  focusNode: passwordFocusNode,
                  controller: passwordController,
                  label: context.t.auth.password,
                  validator: (final value) => InputConverter.validatePassword(
...
                      confirmPasswordFocusNode,
                    );
                  },
                ),
                const SizedBox(height: 20),
                AuthTextField(
                  key: const Key('confirm_password_field'),
                  name: 'confirm_password',
                  controller: confirmPasswordController,
                  validator:
                      (
                        final value,
                      ) => InputConverter.validateConfirmPassword(
...
                    }
                    FocusScope.of(context).requestFocus(phoneFocusNode);
                  },
                ),
                const SizedBox(height: 20),
                FormBuilderTextField(
                  key: const Key('phone_field'),
                  name: 'phone',
                  controller: phoneController,
                  focusNode: phoneFocusNode,
                  keyboardType: TextInputType.phone,
                  decoration: InputDecoration(
                    border: const OutlineInputBorder(
...
                const SizedBox(height: 20),
                switch (state) {
                  AuthLoading() => const CircularProgressIndicator(),
                  _ => SizedBox(
                    width: double.infinity,
                    child: CustomButton(
                      key: const Key('register_button'),
                      onPressed: () async {
                        if (formKey.currentState!.validate()) {
                          await ref
                              .read(authControllerProvider.notifier)
                              .register(
                                firstName: firstNameController.text,
...
