...
                    ),
                  ],
                  style: Theme.of(context).textTheme.bodyLarge,
                ),
              ),
              FormBuilderTextField(
                key: const Key('reset_email_field'),
                name: 'email',
                controller: emailController,
                focusNode: emailFocusNode,
                keyboardType: TextInputType.emailAddress,
                textInputAction: TextInputAction.next,
                decoration: InputDecoration(
...
              const SizedBox.shrink(),
              switch (state) {
                AuthLoading() => const CircularProgressIndicator(),
                _ => SizedBox(
                  width: double.infinity,
                  child: CustomButton(
                    key: const Key('send_reset_button'),
                    onPressed: () {
                      if (formKey.currentState!.saveAndValidate()) {
                        final email = emailController.text;
                        ref
                            .read(authControllerProvider.notifier)
                            .forgotPassword(
...
