...
                    ],
                  ),
                  const SizedBox(height: 20),
                  SizedBox(
                    width: double.infinity,
                    child: CustomButton(
                      key: const Key('verify_button'),
                      onPressed: () async {
                        if (formKey.currentState!.validate()) {
                          otpFocusNode.unfocus();
                          await ref
                              .read(authControllerProvider.notifier)
                              .verifyEmail(
...
